# pawpaw

./: Cargo.toml  config.yml
encoding/: Cargo.toml
encoding/src/: all.rs  lib.rs  util.rs
encoding/src/codec/: japanese.rs  korean.rs  simpchinese.rs  tradchinese.rs
encoding/src/enc-types/: Cargo.toml  lib.rs
encoding/src/enc-types/examples/: rot13.rs
encoding/src/index/japanese/: Cargo.toml  jis0208.rs  jis0212.rs  lib.rs
encoding/src/index/korean/: euc_kr.rs  lib.rs
encoding/src/index/simpchinese/: gb18030.rs  gb18030_ranges.rs  lib.rs
encoding/src/index/singlebyte/: armscii_8.rs  ibm866.rs  iso_8859_10.rs  iso_8859_13.rs  iso_8859_14.rs  iso_8859_15.rs  iso_8859_16.rs  iso_8859_2.rs  iso_8859_3.rs  iso_8859_4.rs  iso_8859_5.rs  iso_8859_6.rs  iso_8859_7.rs  iso_8859_8.rs  koi8_r.rs  koi8_u.rs  lib.rs  macintosh.rs  windows_1250.rs  windows_1251.rs  windows_1252.rs  windows_1253.rs  windows_1254.rs  windows_1255.rs  windows_1256.rs  windows_1257.rs  windows_1258.rs  windows_874.rs  x_mac_cyrillic.rs
encoding/src/index/tests/: index_tests.rs
encoding/src/index/tradchinese/: Cargo.toml  big5.rs  lib.rs
proto/: Cargo.toml
proto/src/: command.rs  error.rs  lib.rs  message.rs  prefix.rs  reply.rs
proto/src/codec/: line.rs  message.rs
src/: client.rs  config.rs  main.rs
src/client/: handle.rs  mod.rs
src/details/: channel.rs  mod.rs  modes.rs
src/proto/: Cargo.toml  command.rs  error.rs  message.rs  mod.rs  prefix.rs  reply.rs
src/proto/codec/: line.rs  message.rs  mod.rs
src/proto/src/: lib.rs
src/proto/src/codec/: line.rs  mod.rs
src/server/: cached.rs  client.rs  listener.rs  mod.rs  socket.rs  state.rs  transport.rs
