[package]
name = "pawpaw"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "proto"]

[features]
default = ["tls"]
ircv3 = []
tls = ["native-tls"]
native-tls = ["dep:tokio-native-tls"]
rustls = ["dep:tokio-rustls"]

[dependencies]
figment = { version = "0.10.8", features = ["env", "yaml"] }
clap = {version = "4.2.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
pin-project = "1.0.12"
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.23.1", optional = true }
tokio-util = "0.7.7"
futures = { version = "0.3.28"}
trust-dns-resolver = "*"
env_logger = "0.10.0"
thiserror = "1.0.40"
log = "0.4.17"
uuid = { version = "1.3.0", features =[ "v4" ] }
proto = { path = "proto" }


[dependencies.tokio]
version = "1.27.0"
features = ["full"]