[package]
name = "pawpaw"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[features]
default = ["tls"]
ircv3 = []
tls = ["native-tls"]
native-tls = ["dep:tokio-native-tls"]
rustls = ["dep:tokio-rustls"]

[dependencies]
figment = { version = "0.10.8", features = ["env", "yaml"] }
clap = {version = "4.2.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
pin-project = "1.0.12"
tokio-util = { version = "0.7.7", features =[ "codec" ] }
futures = { version = "0.3.28"}
trust-dns-resolver = "*"
env_logger = "0.10.0"
thiserror = "1.0.40"
log = "0.4.17"
uuid = { version = "1.3.0", features = [ "v4" ] }
bytes = "1.4.0"
memchr = "2.5.0"
dashmap = "5.4.0"
itertools = "0.10.5"
encoding = { path = "encoding"}
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.24.0", optional = true }

[dependencies.tokio]
version = "1.27.0"
features = ["full"]