[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
tokio-util = { version = "0.7.7", features = ["codec"] }
bytes = "1.4"
memchr = "2.5"
pin-project = "1"
encoding =  { path = "../encoding" }